--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,5 +18,5 @@ jobs:
         with:
           go-version: "1.23.0"
 
-      - name: Verify Go is installed
-        run: go version
+      - name: Run Go unit tests
+        run: go test ./...
