--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,8 +18,15 @@ jobs:
         with:
           go-version: "1.23.0"
 
+      - name: Install gosec
+        run: go install github.com/securego/gosec/v2/cmd/gosec@latest
+
       - name: Run Go unit tests
         run: go test -cover ./...
+
+      - name: Run Gosec
+        run: gosec ./...
+
 
   style:
     name: Style
